force-app/main/default/objects/SKU_Ticket_Inventario__c/SKU_Ticket_Inventario__c.object-meta.xml
<CustomObject>
    <description>Objeto para almacenar información referente a productos de inventario y sus códigos de barras</description>
    <label>SKU Ticket Inventario</label>
    <nameField>
        <label>Nombre de SKU Ticket Inventario</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SKUs Tickets Inventario</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>