force-app/main/default/objects/SKU_Ticket_Inventario__c/fields/Agrupador_RICA__c.field-meta.xml
<CustomField>
    <fullName>Agrupador_RICA__c</fullName>
    <label>Agrupador RICA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>