force-app/main/default/objects/SKU_Ticket_Inventario__c/fields/Categoria_RICA__c.field-meta.xml
<CustomField>
    <fullName>Categoria_RICA__c</fullName>
    <label>Categoria RICA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>