force-app/main/default/objects/SKU_Ticket_Inventario__c/fields/Codigo_de_barras__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_barras__c</fullName>
    <label>Código de barras</label>
    <length>255</length>
    <type>Text</type>
</CustomField>