force-app/main/default/objects/SKU_Ticket_Inventario__c/fields/Compania__c.field-meta.xml
<CustomField>
    <fullName>Compania__c</fullName>
    <label>Compañia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>