force-app/main/default/objects/SKU_Ticket_Inventario__c/fields/Empaque_RICA__c.field-meta.xml
<CustomField>
    <fullName>Empaque_RICA__c</fullName>
    <label>Empaque RICA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>