force-app/main/default/objects/SKU_Ticket_Inventario__c/fields/Fondos__c.field-meta.xml
<CustomField>
    <fullName>Fondos__c</fullName>
    <label>Fondos</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>