force-app/main/default/objects/SKU_Ticket_Inventario__c/fields/Litraje__c.field-meta.xml
<CustomField>
    <fullName>Litraje__c</fullName>
    <label>Litraje RICA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>