force-app/main/default/objects/SKU_Ticket_Inventario__c/fields/Litros__c.field-meta.xml
<CustomField>
    <fullName>Litros__c</fullName>
    <inlineHelpText>Cantidad del contenido en litros.</inlineHelpText>
    <label>Litros</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>