force-app/main/default/objects/SKU_Ticket_Inventario__c/fields/Marca_RICA__c.field-meta.xml
<CustomField>
    <fullName>Marca_RICA__c</fullName>
    <label>Marca RICA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>