force-app/main/default/objects/SKU_Ticket_Inventario__c/fields/Precio_consumidor__c.field-meta.xml
<CustomField>
    <fullName>Precio_consumidor__c</fullName>
    <label>Precio consumidor</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>