force-app/main/default/objects/SKU_Ticket_Inventario__c/fields/Precio_Nielsen__c.field-meta.xml
<CustomField>
    <fullName>Precio_Nielsen__c</fullName>
    <label>Precio Nielsen</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>