force-app/main/default/objects/SKU_Ticket_Inventario__c/fields/Presentacion_RICA__c.field-meta.xml
<CustomField>
    <fullName>Presentacion_RICA__c</fullName>
    <label>Presentación_RICA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>