force-app/main/default/objects/SKU_Ticket_Inventario__c/fields/Submarca_RICA__c.field-meta.xml
<CustomField>
    <fullName>Submarca_RICA__c</fullName>
    <label>Submarca RICA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>