force-app/main/default/objects/SKU_Ticket_Inventario__c/fields/Tamano_RICA__c.field-meta.xml
<CustomField>
    <fullName>Tamano_RICA__c</fullName>
    <label>Tamaño_RICA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>